latest pull after the update

--- a/Order-Edge/index.html
+++ b/Order-Edge/index.html
@@ -10,7 +10,7 @@
 		/>
 		<title>InkTown</title>
 	</head>
-	<body class="font-primary">
+	<body class="font-primary bg-gray-200">
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
